[package]
name = "torssh"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.37.0", features = ["full"] }
anyhow = "1.0.81"
arti-client = { version = "0.14.1", features = ["full"] }
futures = "0.3.30"
tor-hsrproxy = "0.6.0"
tor-hsservice = "0.8.0"
tor-rtcompat = { version = "0.10.0", features = ["tokio", "full"] }
clap = { version = "4.5.4", features = ["derive"] }